--- a/components/atom/card/package.json
+++ b/components/atom/card/package.json
@@ -2,6 +2,10 @@
   "name": "@s-ui/react-atom-card",
   "version": "1.26.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": ["@s-ui", "react", "component", "atom", "card"],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -11,7 +15,19 @@
   "dependencies": {
     "@s-ui/component-dependencies": "1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/atom/card"
+  },
+  "config": {
+    "title": "card",
+    "category": "atom",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+card%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
