--- a/components/atom/popover/package.json
+++ b/components/atom/popover/package.json
@@ -2,6 +2,16 @@
   "name": "@s-ui/react-atom-popover",
   "version": "3.18.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "atom",
+    "popover"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -17,7 +27,19 @@
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/atom/popover"
+  },
+  "config": {
+    "title": "popover",
+    "category": "atom",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+popover%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
