--- a/components/atom/spinner/package.json
+++ b/components/atom/spinner/package.json
@@ -2,6 +2,10 @@
   "name": "@s-ui/react-atom-spinner",
   "version": "2.5.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": ["@s-ui", "react", "component", "atom", "spinner"],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -12,7 +16,19 @@
     "@s-ui/component-dependencies": "1",
     "@s-ui/react-primitive-injector": "1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/atom/spinner"
+  },
+  "config": {
+    "title": "spinner",
+    "category": "atom",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+spinner%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
