--- a/components/molecule/accordion/package.json
+++ b/components/molecule/accordion/package.json
@@ -2,6 +2,16 @@
   "name": "@s-ui/react-molecule-accordion",
   "version": "2.14.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "molecule",
+    "accordion"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -15,7 +25,19 @@
     "@s-ui/react-primitive-polymorphic-element": "1",
     "react-use": "17.3.2"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/molecule/accordion"
+  },
+  "config": {
+    "title": "accordion",
+    "category": "molecule",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+accordion%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
