--- a/components/molecule/badgeCounter/package.json
+++ b/components/molecule/badgeCounter/package.json
@@ -2,6 +2,16 @@
   "name": "@s-ui/react-molecule-badge-counter",
   "version": "1.17.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "molecule",
+    "badgeCounter"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -11,7 +21,19 @@
   "dependencies": {
     "@s-ui/component-dependencies": "1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/molecule/badgeCounter"
+  },
+  "config": {
+    "title": "badgeCounter",
+    "category": "molecule",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+badgeCounter%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
