--- a/components/molecule/validationCode/package.json
+++ b/components/molecule/validationCode/package.json
@@ -2,6 +2,16 @@
   "name": "@s-ui/react-molecule-validation-code",
   "version": "1.8.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "molecule",
+    "validationCode"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -11,16 +21,24 @@
   "peerDependencies": {
     "@s-ui/theme": "8"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/SUI-Components/sui-components"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@s-ui/react-atom-button": "1",
     "@s-ui/react-atom-pin-input": "1",
     "@s-ui/react-atom-validation-text": "1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/molecule/validationCode"
+  },
+  "config": {
+    "title": "validationCode",
+    "category": "molecule",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+validationCode%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
+  "license": "MIT"
 }
