--- a/components/primitive/polymorphicElement/package.json
+++ b/components/primitive/polymorphicElement/package.json
@@ -2,6 +2,16 @@
   "name": "@s-ui/react-primitive-polymorphic-element",
   "version": "1.2.0",
   "description": "",
+  "publishConfig": {
+    "access": "public"
+  },
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "primitive",
+    "polymorphicElement"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -13,9 +23,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/SUI-Components/sui-components"
+    "url": "https://github.com/SUI-Components/sui-components",
+    "directory": "components/primitive/polymorphicElement"
   },
-  "keywords": [],
-  "author": "",
+  "config": {
+    "title": "polymorphicElement",
+    "category": "primitive",
+    "type": "components"
+  },
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Component%3A+polymorphicElement%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
