--- a/utils/sui-component-dependencies/package.json
+++ b/utils/sui-component-dependencies/package.json
@@ -2,12 +2,13 @@
   "name": "@s-ui/component-dependencies",
   "version": "1.9.0",
   "description": "A set of dependencies of all SUI components.",
+  "publishConfig": {
+    "access": "public"
+  },
   "keywords": [
     "fatigue",
     "bundle"
   ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@s-ui/theme": "8",
     "classnames": "2.5.1"
@@ -16,8 +17,13 @@
     "type": "git",
     "url": "git+https://github.com/SUI-Components/sui-components.git"
   },
-  "bugs": {
-    "url": "https://github.com/SUI-Components/sui-components/issues"
+  "config": {
+    "title": "component-dependencies",
+    "type": "utils"
   },
-  "homepage": "https://github.com/SUI-Components/sui-components/tree/master/utils/sui-component-dependencies#readme"
+  "bugs": {
+    "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Util%3A+componentDependencies%22"
+  },
+  "homepage": "https://sui-components.vercel.app/",
+  "license": "MIT"
 }
