feat(utils/sui-tokens): new beta

--- a/utils/sui-theme/package.json
+++ b/utils/sui-theme/package.json
@@ -35,6 +35,9 @@
   "bugs": {
     "url": "https://github.com/SUI-Components/sui-components/issues?q=is%3Aopen+label%3A%22Util%3A+theme%22"
   },
+  "devDependencies": {
+    "@s-ui/tokens": "0.0.0-beta.0"
+  },
   "homepage": "https://sui-components.vercel.app/",
   "license": "MIT"
 }
