feat(utils/sui-tokens): minor schema sructure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "rootDir": "./"
   },
-  "include": ["src", "domain", "components"]
+  "include": ["src", "domain", "components", "utils"]
 }
