feat(utils/sui-tokens): unify the ts syntax

--- a/utils/sui-tokens/tsconfig.json
+++ b/utils/sui-tokens/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": "./src",
     "allowImportingTsExtensions": true,
     "allowJs": true,
-    "module": "CommonJS",
+    "module": "ES2022",
     "esModuleInterop": true,
     "target": "ESNext",
     "moduleResolution": "node",
