docs(components/atom/button): add a11y section

--- a/components/atom/button/demo/package.json
+++ b/components/atom/button/demo/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@s-ui/react-atom-icon": "1",
+    "@s-ui/react-atom-kbd": "1",
     "use-prefers-color-scheme": "1.1.3"
   }
 }
