--- a/components/atom/tag/demo/package.json
+++ b/components/atom/tag/demo/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@s-ui/react-atom-icon": "1"
+    "@s-ui/react-atom-icon": "1",
+    "@s-ui/react-molecule-input-tags": "3",
+    "@s-ui/react-primitive-visually-hidden": "1"
   }
 }
