feat(components/atom/switch): modify and add a11y layers to switch

--- a/components/atom/switch/package.json
+++ b/components/atom/switch/package.json
@@ -5,7 +5,13 @@
   "publishConfig": {
     "access": "public"
   },
-  "keywords": ["@s-ui", "react", "component", "atom", "switch"],
+  "keywords": [
+    "@s-ui",
+    "react",
+    "component",
+    "atom",
+    "switch"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublishOnly": "rimraf ./lib && npm run build:js && npm run build:styles",
@@ -14,7 +20,9 @@
   },
   "dependencies": {
     "@s-ui/react-atom-label": "1",
-    "@s-ui/react-primitive-loading-icon": "1"
+    "@s-ui/react-primitive-loading-icon": "1",
+    "@s-ui/react-primitive-injector": "1",
+    "@s-ui/react-hooks": "1"
   },
   "peerDependencies": {
     "@s-ui/component-dependencies": "1"
