--- a/components/atom/switch/demo/package.json
+++ b/components/atom/switch/demo/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "@s-ui/react-primitive-visually-hidden": "1",
+    "@s-ui/react-atom-kbd": "1"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
